Fully implemented tab complete