@@ -1,6 +1,8 @@
 package tech.sbdevelopment.showcontrol.api.triggers.impl;
 
+import lombok.NoArgsConstructor;
 import org.bukkit.*;
+import org.bukkit.entity.Player;
 import tech.sbdevelopment.showcontrol.api.exceptions.InvalidArgumentException;
 import tech.sbdevelopment.showcontrol.api.triggers.Trigger;
 import tech.sbdevelopment.showcontrol.api.triggers.TriggerIdentifier;
@@ -12,6 +14,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+@NoArgsConstructor(force = true)
 @TriggerIdentifier(value = "firework", minArgs = 5, argDesc = "<world> <x> <y> <z> <configuration ...>", item = Material.FIREWORK_ROCKET)
 public class FireworkTrigger extends Trigger {
     private final Fireworks.Firework fw;
@@ -81,31 +84,32 @@ public class FireworkTrigger extends Trigger {
     }
 
     @Override
-    public List<String> getArgumentTabComplete(int index, String arg) {
+    public List<String> getArgumentTabComplete(Player player, int index, String arg) {
         if (index == 0) {
-            return Bukkit.getWorlds().stream().map(World::getName).toList();
-        } else if (index == 4) {
-            if (arg.contains(":")) {
-                String[] split = arg.split(":");
-                if (split.length != 2) return List.of();
+            return player != null ? List.of(player.getWorld().getName()) : Bukkit.getWorlds().stream().map(World::getName).collect(Collectors.toList());
+        } else if (index == 1) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockX())) : List.of();
+        } else if (index == 2) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockY())) : List.of();
+        } else if (index == 3) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockZ())) : List.of();
+        } else if (index >= 4) {
+            String key = arg.contains(":") ? arg.split(":", -1)[0] : arg;
 
-                String key = split[0];
-
-                if (key.equalsIgnoreCase("color")) {
-                    return Arrays.stream(Color.values()).map(c -> "color:" + c.name()).toList();
-                } else if (key.equalsIgnoreCase("shape")) {
-                    return Arrays.stream(FireworkEffect.Type.values()).map(t -> "shape:" + t.name()).toList();
-                } else if (key.equalsIgnoreCase("fade")) {
-                    return Arrays.stream(Color.values()).map(c -> "fade:" + c.name()).toList();
-                } else if (key.equalsIgnoreCase("effect")) {
-                    return List.of("effect:trail", "effect:twinkle");
-                } else if (key.equalsIgnoreCase("power")) {
-                    return IntStream.rangeClosed(0, 127)
-                            .mapToObj(i -> "power:" + i)
-                            .collect(Collectors.toList());
-                }
-            } else {
+            if (key.isBlank()) {
                 return List.of("color:", "shape:", "fade:", "effect:", "power:");
+            } else if ("color".startsWith(key)) {
+                return Arrays.stream(Color.values()).map(c -> "color:" + c.name()).collect(Collectors.toList());
+            } else if ("shape".startsWith(key)) {
+                return Arrays.stream(FireworkEffect.Type.values()).map(t -> "shape:" + t.name()).collect(Collectors.toList());
+            } else if ("fade".startsWith(key)) {
+                return Arrays.stream(Color.values()).map(c -> "fade:" + c.name()).collect(Collectors.toList());
+            } else if ("effect".startsWith(key)) {
+                return List.of("effect:trail", "effect:twinkle");
+            } else if ("power".startsWith(key)) {
+                return IntStream.rangeClosed(0, 127)
+                        .mapToObj(i -> "power:" + i)
+                        .collect(Collectors.toList());
             }
         }
         return List.of();
