@@ -1,16 +1,20 @@
 package tech.sbdevelopment.showcontrol.api.triggers.impl;
 
-import tech.sbdevelopment.showcontrol.api.exceptions.InvalidArgumentException;
-import tech.sbdevelopment.showcontrol.api.triggers.Trigger;
-import tech.sbdevelopment.showcontrol.api.triggers.TriggerIdentifier;
-import tech.sbdevelopment.showcontrol.elements.Lasers;
-import tech.sbdevelopment.showcontrol.elements.Spots;
+import lombok.NoArgsConstructor;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
+import org.bukkit.entity.Player;
+import tech.sbdevelopment.showcontrol.api.exceptions.InvalidArgumentException;
+import tech.sbdevelopment.showcontrol.api.triggers.Trigger;
+import tech.sbdevelopment.showcontrol.api.triggers.TriggerIdentifier;
+import tech.sbdevelopment.showcontrol.elements.Spots;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@NoArgsConstructor(force = true)
 @TriggerIdentifier(value = "spot", minArgs = 5, argDesc = "<name> <world> <x> <y> <z>")
 public class SpotTrigger extends Trigger {
     private final String name;
@@ -50,11 +54,17 @@ public class SpotTrigger extends Trigger {
     }
 
     @Override
-    public List<String> getArgumentTabComplete(int index, String arg) {
+    public List<String> getArgumentTabComplete(Player player, int index, String arg) {
         if (index == 0) {
-            return Spots.getSpots().keySet().stream().toList();
+            return new ArrayList<>(Spots.getSpots().keySet());
         } else if (index == 1) {
-            return Bukkit.getWorlds().stream().map(World::getName).toList();
+            return player != null ? List.of(player.getWorld().getName()) : Bukkit.getWorlds().stream().map(World::getName).collect(Collectors.toList());
+        } else if (index == 2) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockX())) : List.of();
+        } else if (index == 3) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockY())) : List.of();
+        } else if (index == 4) {
+            return player != null ? List.of(String.valueOf(player.getLocation().getBlockZ())) : List.of();
         }
         return List.of();
     }
